--- a/beta/diff.html
+++ b/beta/diff.html
@@ -114,8 +114,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-505445" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{ha-core/homeassistant/components → beta/custom_components}/plugwise/config_flow.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+138</span>
-          <span class="d2h-lines-deleted">-30</span>
+          <span class="d2h-lines-added">+137</span>
+          <span class="d2h-lines-deleted">-29</span>
       </span>
     </span>
 </li>
@@ -13742,7 +13742,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -16,7 +17,16 @@</div>
+        <div class="d2h-code-side-line">@@ -16,7 +17,15 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -13781,17 +13781,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">from homeassistant.<del>config_entries</del> import <del>SOURCE_USER, ConfigFlow, ConfigFlowResult</del></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
-      
-    </td>
-    <td class="d2h-cntx d2h-emptyplaceholder">
-        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">from homeassistant.config_entries import <del>SOURCE_USER, ConfigFlow, ConfigFlowResult</del></span>
         </div>
     </td>
 </tr><tr>
@@ -13907,7 +13897,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -24,26 +34,46 @@</div>
+        <div class="d2h-code-side-line">@@ -24,26 +33,47 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -14020,12 +14010,12 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-del">
+    <td class="d2h-code-side-linenumber d2h-cntx">
       31
     </td>
-    <td class="d2h-del">
+    <td class="d2h-cntx">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn">from homeassistant.helpers.service_info.zeroconf import ZeroconfServiceInfo</span>
         </div>
     </td>
@@ -16755,7 +16745,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from homeassistant.<ins>components.zeroconf</ins> import <ins>ZeroconfServiceInfo</ins></span>
+            <span class="d2h-code-line-ctn">from homeassistant.config_entries import <ins>(</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -16765,7 +16755,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from homeassistant.config_entries import (</span>
+            <span class="d2h-code-line-ctn">    SOURCE_USER,</span>
         </div>
     </td>
 </tr><tr>
@@ -16775,7 +16765,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    SOURCE_USER,</span>
+            <span class="d2h-code-line-ctn">    ConfigEntry,</span>
         </div>
     </td>
 </tr><tr>
@@ -16785,7 +16775,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    ConfigEntry,</span>
+            <span class="d2h-code-line-ctn">    ConfigFlow,</span>
         </div>
     </td>
 </tr><tr>
@@ -16795,7 +16785,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    ConfigFlow,</span>
+            <span class="d2h-code-line-ctn">    ConfigFlowResult,</span>
         </div>
     </td>
 </tr><tr>
@@ -16805,7 +16795,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    ConfigFlowResult,</span>
+            <span class="d2h-code-line-ctn">    OptionsFlow,</span>
         </div>
     </td>
 </tr><tr>
@@ -16815,7 +16805,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    OptionsFlow,</span>
+            <span class="d2h-code-line-ctn">)</span>
         </div>
     </td>
 </tr><tr>
@@ -16825,7 +16815,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">)</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -16835,22 +16825,12 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><br></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-side-linenumber d2h-ins">
-      29
-    </td>
-    <td class="d2h-ins">
-        <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">+</span>
             <span class="d2h-code-line-ctn"># Upstream</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      30
+      29
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16860,7 +16840,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      31
+      30
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16870,7 +16850,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      32
+      31
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16885,7 +16865,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      34
+      33
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16895,7 +16875,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      35
+      34
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16905,7 +16885,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      36
+      35
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16915,7 +16895,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      37
+      36
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -16925,7 +16905,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      38
+      37
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16935,7 +16915,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      39
+      38
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16945,7 +16925,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      40
+      39
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -16955,7 +16935,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      41
+      40
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -16965,7 +16945,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      42
+      41
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -16975,7 +16955,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      43
+      42
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -16985,7 +16965,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      44
+      43
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16994,13 +16974,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
-      
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      44
     </td>
-    <td class="d2h-cntx d2h-emptyplaceholder">
-        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">from homeassistant.helpers.service_info.zeroconf import ZeroconfServiceInfo</span>
         </div>
     </td>
 </tr><tr>
@@ -28858,7 +28838,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>56</ins>.<ins>0</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>56</ins>.<ins>1</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
