--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -114,8 +114,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-252159" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/config_flow.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+30</span>
-          <span class="d2h-lines-deleted">-138</span>
+          <span class="d2h-lines-added">+29</span>
+          <span class="d2h-lines-deleted">-137</span>
       </span>
     </span>
 </li>
@@ -13742,7 +13742,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -17,16 +16,7 @@</div>
+        <div class="d2h-code-side-line">@@ -17,15 +16,7 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -13781,7 +13781,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">from homeassistant.<del>components.zeroconf</del> import <del>ZeroconfServiceInfo</del></span>
+            <span class="d2h-code-line-ctn">from homeassistant.config_entries import <del>(</del></span>
         </div>
     </td>
 </tr><tr>
@@ -13791,7 +13791,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">from homeassistant.config_entries import (</span>
+            <span class="d2h-code-line-ctn">    SOURCE_USER,</span>
         </div>
     </td>
 </tr><tr>
@@ -13801,7 +13801,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    SOURCE_USER,</span>
+            <span class="d2h-code-line-ctn">    ConfigEntry,</span>
         </div>
     </td>
 </tr><tr>
@@ -13811,7 +13811,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    ConfigEntry,</span>
+            <span class="d2h-code-line-ctn">    ConfigFlow,</span>
         </div>
     </td>
 </tr><tr>
@@ -13821,7 +13821,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    ConfigFlow,</span>
+            <span class="d2h-code-line-ctn">    ConfigFlowResult,</span>
         </div>
     </td>
 </tr><tr>
@@ -13831,7 +13831,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    ConfigFlowResult,</span>
+            <span class="d2h-code-line-ctn">    OptionsFlow,</span>
         </div>
     </td>
 </tr><tr>
@@ -13841,7 +13841,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    OptionsFlow,</span>
+            <span class="d2h-code-line-ctn">)</span>
         </div>
     </td>
 </tr><tr>
@@ -13851,7 +13851,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">)</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -13861,22 +13861,12 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><br></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-side-linenumber d2h-del">
-      29
-    </td>
-    <td class="d2h-del">
-        <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn"># Upstream</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      30
+      29
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -13886,7 +13876,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      31
+      30
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -13896,7 +13886,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      32
+      31
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -13907,11 +13897,11 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -34,46 +24,26 @@</div>
+        <div class="d2h-code-side-line">@@ -33,47 +24,26 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      34
+      33
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -13921,7 +13911,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      35
+      34
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -13931,7 +13921,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      36
+      35
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -13941,7 +13931,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      37
+      36
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -13951,7 +13941,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      38
+      37
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -13961,7 +13951,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      39
+      38
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -13971,7 +13961,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      40
+      39
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -13981,7 +13971,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      41
+      40
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -13991,7 +13981,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      42
+      41
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -14001,7 +13991,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      43
+      42
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -14011,7 +14001,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      44
+      43
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -14020,13 +14010,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
-      
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      44
     </td>
-    <td class="d2h-cntx d2h-emptyplaceholder">
-        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">from homeassistant.helpers.service_info.zeroconf import ZeroconfServiceInfo</span>
         </div>
     </td>
 </tr><tr>
@@ -16765,17 +16755,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from homeassistant.<ins>config_entries</ins> import <ins>SOURCE_USER, ConfigFlow, ConfigFlowResult</ins></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
-      
-    </td>
-    <td class="d2h-cntx d2h-emptyplaceholder">
-        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">from homeassistant.config_entries import <ins>SOURCE_USER, ConfigFlow, ConfigFlowResult</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -17004,12 +16984,12 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-ins">
+    <td class="d2h-code-side-linenumber d2h-cntx">
       31
     </td>
-    <td class="d2h-ins">
+    <td class="d2h-cntx">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn">from homeassistant.helpers.service_info.zeroconf import ZeroconfServiceInfo</span>
         </div>
     </td>
@@ -28734,7 +28714,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>56</del>.<del>0</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>56</del>.<del>1</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
